--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+SearchImage/.idea/SearchImage.iml
+SearchImage/.idea/misc.xml
+SearchImage/.idea/workspace.xml
+SearchImage/.idea/vcs.xml
+SearchImage/.idea
